# CPSC427-VAPE

./: .gitignore  CHANGELOG  CMakeLists.txt  README.md  README.txt  V.A.P.E Nation Oct 21 Crossplay Results.xlsx  V.A.P.E. Nation Nov 18 Crossplay Results.xlsx  final-game.md  minimal-playability.md  playable-game.md  results_after.txt  results_start.txt  skeletal-game.md
cmake/Modules/: assets-download.cmake  physfs-download.cmake  physfs.cmake
data/meshes/: boss2-v2.blend  boss2-v2.blend1  boss2.blend  boss2.blend1  boss2.mtl  boss2.testmesh
data/textures/: Boss2Dialogue.pdn  Lasers3v2.pdn  MainMenuRevamp.pdn  TutorialText.pdn  TutorialText1.pdn  TutorialText2.pdn  TutorialText3.pdn  TutorialText4.pdn  TutorialText5.pdn  UIDiagram.pdn  controls.pdn  pausemenu.pdn  ship_normal.pdn
data/textures/Dialogues/: Boss1Dialogue.pdn  Boss2Dialogue.pdn  Boss3Dialogue.pdn
data/textures/UI/: ButtonBase.pdn
ext/ffmpeg/: CMakeLists.txt
ext/physfs-cpp/: physfs.hpp
shaders/: font.fs.glsl  laser.fs.glsl  laser.vs.glsl  pebble.fs.glsl  salmon.fs.glsl  vamp.fs.glsl  vamp.vs.glsl  vampParticle.fs.glsl  vampParticle.vs.glsl  water.fs.glsl  water.vs.glsl
src/: bullet.cpp  bullet.hpp  common.cpp  common.hpp  main.cpp  salmon.cpp  salmon.hpp  turtle.cpp  world.cpp  world.hpp
src/Components/: BoundaryComponent.hpp  BulletComponent.hpp  CollisionComponent.hpp  EffectComponent.hpp  EnemyComponent.hpp  HealthComponent.hpp  MeshComponent.hpp  MotionComponent.hpp  PhysicsComponent.hpp  PickupComponent.hpp  PlayerComponent.hpp  SpriteComponent.hpp  TextureComponent.hpp  TransformComponent.hpp
src/Engine/: GameEngine.cpp  GameEngine.hpp  GameState.hpp
src/Engine/ECS/: Component.hpp  ECS.hpp  Entity.h  Entity.hpp  EntityManager.cpp  EntityManager.hpp  System.hpp  SystemManager.cpp  SystemManager.hpp
src/Engine/Graphics/: Font.cpp  Font.hpp  VideoUtil.cpp  VideoUtil.hpp
src/Engine/States/: BetweenLevelsState.cpp  BetweenLevelsState.hpp  ControlsState.hpp  IntroState.cpp  IntroState.hpp  Level.cpp  Level.hpp  LevelState.cpp  LevelState.hpp  MainMenuState.cpp  MainMenuState.hpp  OutroState.cpp  OutroState.hpp  TutorialState.cpp  TutorialState.hpp
src/Entities/: Dialogue.cpp  Dialogue.hpp  EntityGrid.cpp  EntityGrid.hpp  Explosion.cpp  Explosion.hpp  HealthHeart.cpp  HealthHeart.hpp  Intro.cpp  Intro.hpp  MainMenu.cpp  MainMenu.hpp  Player.cpp  Player.hpp  Space.cpp  Space.hpp  Vamp.cpp  Vamp.hpp  Video.cpp  Video.hpp  bullet.cpp  bullet.hpp  fish.cpp  fish.hpp  turtle.cpp  turtle.hpp
src/Entities/Bosses/: Boss.hpp  Boss1.cpp  Boss1.hpp  Boss2.cpp  Boss2.hpp  Boss3.cpp  Boss3.hpp  Boss3Clone.cpp  Boss3Clone.hpp  Clone.hpp
src/Entities/Debugging/: DebugDot.cpp  DebugDot.hpp
src/Entities/Effects/: Explosion.cpp  Explosion.hpp  VampParticleEmitter.cpp  VampParticleEmitter.hpp
src/Entities/Enemies/: Enemy.hpp  EnemyExplosivePayload.cpp  EnemyExplosivePayload.hpp  EnemyGenericShooter.cpp  EnemyGenericShooter.hpp  EnemySpeedster.cpp  EnemySpeedster.hpp  EnemyTargettedShooter.cpp  EnemyTargettedShooter.hpp  PickupEnemy.cpp  PickupEnemy.hpp  turtle.cpp  turtle.hpp
src/Entities/Pickups/: HealthPickup.cpp  HealthPickup.hpp  MachineGunPickup.cpp  MachineGunPickup.hpp  Pickup.hpp  TestPickup.cpp  TestPickup.hpp  TriShotPickup.cpp  TriShotPickup.hpp  VampExpandPickup.cpp  VampExpandPickup.hpp
src/Entities/Projectiles and Damaging/: Laser.cpp  Laser.hpp  Projectile.hpp  bullet.cpp  bullet.hpp  laser.cpp  laser.hpp
src/Entities/Projectiles and Damaging/Laser/: Laser.cpp  Laser.hpp  LaserBeamSprite.cpp  LaserBeamSprite.hpp
src/Entities/UI/: BossHealth.cpp  BossHealthBar.cpp  BossHealthBar.hpp  Button.hpp  Continue.cpp  Continue.hpp  Cursor.cpp  Cursor.hpp  Dialogue.cpp  Dialogue.hpp  EnterContinue.cpp  EnterContinue.hpp  EnterSkip.cpp  EnterSkip.hpp  Health.cpp  Health.hpp  ScoreText.cpp  ScoreText.hpp  Text.cpp  Text.hpp  UIPanel.cpp  UIPanel.hpp  UIPanelBackground.cpp  UIPanelBackground.hpp  VampCharge.cpp  VampCharge.hpp
src/Entities/UI/BossHealth/: BossHealth.cpp  BossHealth.hpp  BossHealthBar.cpp  BossHealthBar.hpp
src/Entities/UI/Dialogue/: Continue.cpp
src/Entities/UI/Lives/: Lives.cpp  Lives.hpp  LivesBackground.cpp  LivesBackground.hpp
src/Entities/UI/MainMenu/: ContinueButton.cpp  ContinueButton.hpp  ExitButton.cpp  ExitButton.hpp  MainMenu.cpp  StartButton.cpp  StartButton.hpp  TutorialButton.cpp  TutorialButton.hpp
src/Entities/UI/PauseMenu/: ControlDiagram.cpp  ControlDiagram.hpp  ExitToMenuButton.cpp  ExitToMenuButton.hpp  PauseMenu.cpp  PauseMenu.hpp  ResumeButton.cpp  ResumeButton.hpp
src/Entities/UI/PlayerHealth/: Health.cpp  Health.hpp  HealthBar.cpp  HealthBar.hpp  HealthIcon.cpp  HealthIcon.hpp
src/Entities/UI/PlayerScore/: Score.cpp  Score.hpp  ScoreBackground.cpp  ScoreBackground.hpp
src/Entities/UI/UIPanel/: UIPanel.cpp
src/Entities/UI/Vamp/: VampBar.cpp  VampBar.hpp  VampCharge.cpp  VampCharge.hpp  VampIcon.cpp  VampIcon.hpp
src/Entities/UI/Weapon/: WeaponBackground.cpp  WeaponBackground.hpp  WeaponUI.cpp  WeaponUI.hpp
src/Entities/UI/WeaponUI/: WeaponUI.cpp  WeaponUI.hpp
src/Entities/Weapons/: BulletStraightShot.cpp  BulletStraightShot.hpp  Weapon.cpp  Weapon.hpp  WeaponMachineGun.cpp  WeaponMachineGun.hpp  WeaponTriShot.cpp  WeaponTriShot.hpp
src/Levels/: Level.hpp  Level1.hpp  Level2.hpp  Level3.hpp  Levels.hpp  Waves.hpp
src/Systems/: CollisionSystem.cpp  CollisionSystem.hpp  EnemySpawnerSystem.cpp  EnemySpawnerSystem.hpp  MotionSystem.cpp  MotionSystem.hpp  PickupSystem.cpp  PickupSystem.hpp  ProjectileSystem.cpp  ProjectileSystem.hpp
src/Utils/: PhysFSHelpers.cpp  PhysFSHelpers.hpp  PhysFSStream.cpp  PhysFSStream.hpp  SaveData.cpp  SaveData.hpp
